--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,29 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+}
+
+.navbar {
+  display: flex;
+  background-color: aquamarine;
+  padding: 10px;
+  justify-content: space-between;
+  align-items: center;
+
+  .links {
+    display: flex;
+    gap: 20px;
+    margin-block: auto;
+
+    a {
+      list-style-type: none;
+      text-decoration: none;
+    }
+
+    a:hover {
+      animation: pulse infinite;
+      animation-duration: 800ms;
+    }
+  }
 }
