--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Persona</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="/assets/css/main.css" />
-    <!-- <link rel="stylesheet" href="/assets/css/index.css" /> -->
+
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
   <body>
+    <%- include("../partials/navbar") %>
+
     <div class="container"></div>
     <script src="/assets/js/index.js"></script>
   </body>
