--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,15 +1,120 @@
+$gradient-top: linear-gradient(
+  0deg,
+  #2176aeff,
+  #57b8ffff,
+  #b66d0dff,
+  #fbb13cff,
+  #fe6847ff
+);
+$gradient-right: linear-gradient(
+  90deg,
+  #2176aeff,
+  #57b8ffff,
+  #b66d0dff,
+  #fbb13cff,
+  #fe6847ff
+);
+$gradient-bottom: linear-gradient(
+  180deg,
+  #2176aeff,
+  #57b8ffff,
+  #b66d0dff,
+  #fbb13cff,
+  #fe6847ff
+);
+$gradient-left: linear-gradient(
+  270deg,
+  #2176aeff,
+  #57b8ffff,
+  #b66d0dff,
+  #fbb13cff,
+  #fe6847ff
+);
+$gradient-top-right: linear-gradient(
+  45deg,
+  #2176aeff,
+  #57b8ffff,
+  #b66d0dff,
+  #fbb13cff,
+  #fe6847ff
+);
+$gradient-bottom-right: linear-gradient(
+  135deg,
+  #2176aeff,
+  #57b8ffff,
+  #b66d0dff,
+  #fbb13cff,
+  #fe6847ff
+);
+$gradient-top-left: linear-gradient(
+  225deg,
+  #2176aeff,
+  #57b8ffff,
+  #b66d0dff,
+  #fbb13cff,
+  #fe6847ff
+);
+$gradient-bottom-left: linear-gradient(
+  315deg,
+  #2176aeff,
+  #57b8ffff,
+  #b66d0dff,
+  #fbb13cff,
+  #fe6847ff
+);
+$gradient-radial: radial-gradient(
+  #2176aeff,
+  #57b8ffff,
+  #b66d0dff,
+  #fbb13cff,
+  #fe6847ff
+);
+
+$honolulu-blue: #2176aeff;
+$argentinian-blue: #57b8ffff;
+$tigers-eye: #b66d0dff;
+$hunyadi-yellow: #fbb13cff;
+$tomato: #fe6847ff;
+
+body {
+  height: 100%;
+  // background: linear-gradient(
+  //   45deg,
+  //   $tomato,
+  //   $tomato,
+  //   $honolulu-blue,
+  //   $honolulu-blue
+  // );
+
+  // background-repeat: no-repeat;
+  // background-size: 100% 400%;
+
+  background-color: $hunyadi-yellow;
+}
+
+a {
+  color: $hunyadi-yellow;
+}
+
 * {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: white;
 }
 
 .navbar {
   display: flex;
-  background-color: aquamarine;
   padding: 10px;
   justify-content: space-between;
   align-items: center;
+  background-color: white;
+
+  margin-bottom: 10px;
+
+  img {
+    width: 40%;
+  }
 
   .links {
     display: flex;
@@ -25,5 +130,50 @@
       animation: pulse infinite;
       animation-duration: 800ms;
     }
+  }
+}
+
+.container {
+  margin-left: 10px;
+}
+
+input {
+  width: 215px;
+  height: 30px;
+  border-radius: 15px;
+  border: 1px solid black;
+  text-align: center;
+}
+
+button {
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: aquamarine;
+  border: 0;
+
+  box-shadow: gray 1px 1px 5px;
+
+  &:hover {
+    opacity: 0.9;
+  }
+}
+
+.pressed {
+  box-shadow: inset gray 1px 1px 5px;
+}
+
+.msg-container {
+  display: grid;
+  place-self: center;
+  width: 50%;
+  margin-top: 10px;
+
+  .error {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid red;
+    background-color: rgb(194, 100, 100);
+    border-radius: 15px;
   }
 }
