--- a/views/pages/character.ejs
+++ b/views/pages/character.ejs
@@ -35,5 +35,6 @@
       var editing = Boolean("<%- editing %>");
     </script>
     <script src="/assets/js/editor.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
   </body>
 </html>
