--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,6 +16,10 @@
     <%- include("../partials/navbar") %>
 
     <div class="container"></div>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="/assets/js/index.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
