--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,11 +1,12 @@
 <div class="navbar">
   <div class="brand">
-    <h1>Persona</h1>
+    <a href="/"><img src="/assets/img/persona-brand.png" alt="" /></a>
   </div>
+
+  <p class="logged-text"></p>
 
   <div class="links">
     <a href="/">Home</a>
     <a href="/characters">Characters</a>
-    <a href="/add">Add a character</a>
   </div>
 </div>
